[gd_scene load_steps=40 format=2]

[ext_resource path="res://scenes/fase 2/Area2D.gd" type="Script" id=1]
[ext_resource path="res://sprites/fase_dos_fios-Sheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/fase 2/fios level.gd" type="Script" id=3]
[ext_resource path="res://sprites/balinhaVTal.png" type="Texture" id=4]
[ext_resource path="res://sprites/pausar .png" type="Texture" id=5]
[ext_resource path="res://sprites/button play.png" type="Texture" id=6]
[ext_resource path="res://sprites/button casinha .png" type="Texture" id=7]
[ext_resource path="res://Fonte/Lato-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sprites/button ajuste audio (3).png" type="Texture" id=9]
[ext_resource path="res://sprites/ajuste audio.png" type="Texture" id=10]
[ext_resource path="res://scenes/fase 2/tutorial-fios.tscn" type="PackedScene" id=11]
[ext_resource path="res://musics and sfx/572936__bloodpixelhero__error (1).wav" type="AudioStream" id=12]
[ext_resource path="res://musics and sfx/item.wav" type="AudioStream" id=13]
[ext_resource path="res://musics and sfx/win.wav" type="AudioStream" id=14]
[ext_resource path="res://musics and sfx/fios.wav" type="AudioStream" id=15]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 1080, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 360, 640 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 1440, 0, 360, 640 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "oneError",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "threeError",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "twoError",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "win",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19, 14 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.5, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14, 14 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 18.5, 14 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 13.5, 14.75 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18.5, 14 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 19, 14 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 200, 175 )

[sub_resource type="StyleBoxTexture" id=22]

[sub_resource type="StyleBoxTexture" id=23]

[sub_resource type="DynamicFont" id=24]
size = 29
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 180, 320 )
frames = SubResource( 13 )

[node name="500mb" type="Label" parent="AnimatedSprite"]
margin_left = 57.0
margin_top = 154.0
margin_right = 109.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 25, 23 )
custom_fonts/font = SubResource( 17 )
text = "500 mb"

[node name="1gb" type="Label" parent="AnimatedSprite"]
margin_left = 55.0
margin_top = 244.0
margin_right = 104.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 25, 23 )
custom_fonts/font = SubResource( 18 )
text = "1GB"

[node name="200mb" type="Label" parent="AnimatedSprite"]
margin_left = 56.0
margin_top = 215.0
margin_right = 108.0
margin_bottom = 235.0
rect_pivot_offset = Vector2( 25, 23 )
custom_fonts/font = SubResource( 19 )
text = "200 mb"

[node name="400mb" type="Label" parent="AnimatedSprite"]
margin_left = 55.0
margin_top = 185.0
margin_right = 107.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 25, 23 )
custom_fonts/font = SubResource( 20 )
text = "400 mb"

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 180, 320 )
texture = ExtResource( 2 )
hframes = 5

[node name="Red_line" type="Line2D" parent="."]
position = Vector2( 60, 342 )
points = PoolVector2Array( -9, -8, -10, -9 )
default_color = Color( 0.886275, 0.447059, 0.521569, 1 )

[node name="Green" type="Node2D" parent="."]
position = Vector2( 32, 183 )

[node name="Green_line" type="Line2D" parent="."]
position = Vector2( -71, 15 )
points = PoolVector2Array( 117, 79, 125, 80 )
default_color = Color( 0.380392, 0.647059, 0.247059, 1 )

[node name="Red_selection" type="Area2D" parent="."]
position = Vector2( 31, 47 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Red_selection"]
position = Vector2( 14, 283 )
shape = SubResource( 1 )

[node name="Blue_line" type="Line2D" parent="."]
position = Vector2( 34.1111, 150 )
scale = Vector2( 0.962963, 1 )
points = PoolVector2Array( 13, 21, 20, 23 )
default_color = Color( 0.270588, 0.447059, 0.890196, 1 )

[node name="Red_terminal" type="Area2D" parent="."]
position = Vector2( -1, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Red_terminal"]
position = Vector2( 311, 156 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Red_terminal"]
margin_left = 296.0
margin_top = 146.0
margin_right = 326.0
margin_bottom = 166.0
color = Color( 0.886275, 0.447059, 0.521569, 1 )

[node name="Green_terminal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Green_terminal"]
position = Vector2( 310, 220 )
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Green_terminal"]
margin_left = 295.0
margin_top = 210.0
margin_right = 325.0
margin_bottom = 230.0
color = Color( 0.380392, 0.647059, 0.247059, 1 )

[node name="Green_selection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Green_selection"]
position = Vector2( 45, 90 )
shape = SubResource( 4 )

[node name="Blue_selection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blue_selection"]
position = Vector2( 45, 170 )
shape = SubResource( 5 )

[node name="Blue_terminal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blue_terminal"]
position = Vector2( 309.5, 285 )
shape = SubResource( 14 )

[node name="ColorRect" type="ColorRect" parent="Blue_terminal"]
margin_left = 295.0
margin_top = 275.0
margin_right = 325.0
margin_bottom = 295.0
rect_pivot_offset = Vector2( -238, 14 )
color = Color( 0.152941, 0.537255, 0.803922, 1 )

[node name="Orange_selection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orange_selection"]
position = Vector2( 44.5, 250.75 )
shape = SubResource( 15 )

[node name="Orange_terminal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orange_terminal"]
position = Vector2( 310, 90 )
shape = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="Orange_terminal"]
margin_left = 295.0
margin_top = 80.0
margin_right = 325.0
margin_bottom = 100.0
color = Color( 0.945098, 0.392157, 0.121569, 1 )

[node name="Orange_line" type="Line2D" parent="."]
position = Vector2( 45.1923, 250.391 )
scale = Vector2( 0.884615, 0.956522 )
points = PoolVector2Array( 3, -1, 9, -4 )
default_color = Color( 0.945098, 0.392157, 0.121569, 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 310, 89 )
scale = Vector2( 0.121875, 0.132813 )
texture = ExtResource( 4 )

[node name="Gray_terminal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gray_terminal"]
position = Vector2( 310, 345 )
shape = SubResource( 16 )

[node name="ColorRect" type="ColorRect" parent="Gray_terminal"]
margin_left = 295.0
margin_top = 335.0
margin_right = 325.0
margin_bottom = 355.0
color = Color( 0.392157, 0.529412, 0.54902, 1 )

[node name="FundoPause" type="Sprite" parent="."]
pause_mode = 2
visible = false
z_index = 5

[node name="ColorRect" type="ColorRect" parent="FundoPause"]
margin_left = -1.0
margin_top = -3.0
margin_right = 387.0
margin_bottom = 659.0
color = Color( 0.611765, 0.67451, 0.705882, 1 )

[node name="Button3" type="Button" parent="FundoPause"]
margin_left = 219.0
margin_top = 98.0
margin_right = 7143.0
margin_bottom = 7016.0
rect_scale = Vector2( 0.0126425, 0.0126425 )
icon = ExtResource( 7 )
expand_icon = true

[node name="Button2" type="Button" parent="FundoPause"]
margin_left = 78.0
margin_top = 100.0
margin_right = 7040.0
margin_bottom = 7018.0
rect_scale = Vector2( 0.0124347, 0.0124347 )
text = "voltar"
icon = ExtResource( 6 )
expand_icon = true

[node name="HSlider" type="HSlider" parent="FundoPause"]
margin_left = 80.0
margin_top = 217.0
margin_right = 322.0
margin_bottom = 392.0
rect_scale = Vector2( 1.07574, 0.945809 )
rect_pivot_offset = Vector2( 158.484, 173 )
input_pass_on_modal_close_click = false
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 21 )
custom_styles/grabber_area_highlight = SubResource( 22 )
custom_styles/grabber_area = SubResource( 23 )
min_value = -30.0
max_value = 0.0

[node name="Label" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 136.0
margin_top = 295.0
margin_right = 275.0
margin_bottom = 316.0

[node name="Label2" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 134.0
margin_top = 375.0
margin_right = 262.0
margin_bottom = 389.0

[node name="Label3" type="Label" parent="FundoPause"]
margin_left = 146.0
margin_top = 245.0
margin_right = 247.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 56, 14 )
custom_fonts/font = SubResource( 24 )
text = "Volume"

[node name="Pausar" type="Button" parent="."]
margin_left = 309.0
margin_top = 6.0
margin_right = 6511.0
margin_bottom = 6208.0
rect_scale = Vector2( 0.00596626, 0.00596626 )
text = "pausar"
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource( 11 )]
pause_mode = 2

[node name="Erro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Certo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -5.453

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -8.761
autoplay = true

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="input_event" from="Red_selection" to="." method="_on_Red_selection_input_event"]
[connection signal="input_event" from="Red_terminal" to="." method="_on_Red_terminal_input_event"]
[connection signal="mouse_entered" from="Red_terminal" to="." method="_on_Red_terminal_mouse_entered"]
[connection signal="input_event" from="Green_terminal" to="." method="_on_Green_terminal_input_event"]
[connection signal="mouse_entered" from="Green_terminal" to="." method="_on_Green_terminal_mouse_entered"]
[connection signal="input_event" from="Green_selection" to="." method="_on_Green_selection_input_event"]
[connection signal="input_event" from="Blue_selection" to="." method="_on_Blue_selection_input_event"]
[connection signal="input_event" from="Blue_terminal" to="." method="_on_Blue_terminal_input_event"]
[connection signal="mouse_entered" from="Blue_terminal" to="." method="_on_Blue_terminal_mouse_entered"]
[connection signal="input_event" from="Orange_selection" to="." method="_on_Orange_selection_input_event"]
[connection signal="input_event" from="Orange_terminal" to="." method="_on_Orange_terminal_input_event"]
[connection signal="mouse_entered" from="Orange_terminal" to="." method="_on_Orange_terminal_mouse_entered"]
[connection signal="input_event" from="Gray_terminal" to="." method="_on_Gray_terminal_input_event"]
[connection signal="mouse_entered" from="Gray_terminal" to="." method="_on_Gray_terminal_mouse_entered"]
[connection signal="pressed" from="FundoPause/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="FundoPause/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Pausar" to="." method="_on_Pausar_pressed"]
